feat : 채팅방 불러오는 api 수정